--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -115,12 +115,7 @@
         <p class="text-muted small mb-3">
           Временно отключите сервисы для технического обслуживания или снижения нагрузки на бот.
         </p>
-        <form action="/settings/update" method="POST" id="servicesForm" 
-              onsubmit="
-                document.getElementById('useSpotifyValue').value = document.getElementById('useSpotify').checked ? 'true' : 'false';
-                document.getElementById('useYoutubeValue').value = document.getElementById('useYoutube').checked ? 'true' : 'false';
-                document.getElementById('useSoundcloudValue').value = document.getElementById('useSoundcloud').checked ? 'true' : 'false';
-              ">
+        <form action="/settings/update" method="POST" id="servicesForm">
           <input type="hidden" id="useSpotifyValue" name="use_spotify" value="<%= settings.use_spotify || 'true' %>">
           <input type="hidden" id="useYoutubeValue" name="use_youtube" value="<%= settings.use_youtube || 'true' %>">
           <input type="hidden" id="useSoundcloudValue" name="use_soundcloud" value="<%= settings.use_soundcloud || 'true' %>">
@@ -137,7 +132,10 @@
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="useSpotify"
                        <%= settings.use_spotify !== 'false' ? 'checked' : '' %>
-                       onchange="document.getElementById('servicesForm').submit()"
+                       onchange="
+                         document.getElementById('useSpotifyValue').value = this.checked ? 'true' : 'false';
+                         document.getElementById('servicesForm').submit();
+                       "
                        style="width: 2.5rem; height: 1.25rem;">
               </div>
             </div>
@@ -153,7 +151,10 @@
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="useYoutube"
                        <%= settings.use_youtube !== 'false' ? 'checked' : '' %>
-                       onchange="document.getElementById('servicesForm').submit()"
+                       onchange="
+                         document.getElementById('useYoutubeValue').value = this.checked ? 'true' : 'false';
+                         document.getElementById('servicesForm').submit();
+                       "
                        style="width: 2.5rem; height: 1.25rem;">
               </div>
             </div>
@@ -169,7 +170,10 @@
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="useSoundcloud"
                        <%= settings.use_soundcloud !== 'false' ? 'checked' : '' %>
-                       onchange="document.getElementById('servicesForm').submit()"
+                       onchange="
+                         document.getElementById('useSoundcloudValue').value = this.checked ? 'true' : 'false';
+                         document.getElementById('servicesForm').submit();
+                       "
                        style="width: 2.5rem; height: 1.25rem;">
               </div>
             </div>
